subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/valid/Cast_Valid_5.while
[int] f([int|null] x) {
    if (x is [int]) {
        return x;
    } else {
        return [];
    }
}

void main() {
    print f([5, null]);
}
