subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/DefiniteAssign_Invalid_10.while
int f(int x) {
    [int] rs = [1,2,y];
    return |rs|;
}
